// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseMarbleDiagram parses marble diagrams empty 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams hot 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "^",
    "index": 1,
    "type": "SUBSCRIPTION_POINT",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "-",
    "index": 3,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "b",
    "index": 4,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 5,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "-",
    "index": 6,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams invalid expression 1`] = `
Array [
  Object {
    "char": "i",
    "index": 0,
    "type": "VARIABLE",
  },
  Object {
    "char": " ",
    "index": 1,
    "type": "UNKNOWN",
  },
  Object {
    "char": "=",
    "index": 2,
    "type": "UNKNOWN",
  },
  Object {
    "char": ">",
    "index": 3,
    "type": "UNKNOWN",
  },
  Object {
    "char": " ",
    "index": 4,
    "type": "UNKNOWN",
  },
  Object {
    "char": "i",
    "index": 5,
    "type": "VARIABLE",
  },
  Object {
    "char": " ",
    "index": 6,
    "type": "UNKNOWN",
  },
  Object {
    "char": "<",
    "index": 7,
    "type": "UNKNOWN",
  },
  Object {
    "char": " ",
    "index": 8,
    "type": "UNKNOWN",
  },
  Object {
    "char": "3",
    "index": 9,
    "type": "VARIABLE",
  },
  Object {
    "char": "}",
    "index": 10,
    "type": "EXPRESSION_END",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams invalid operator 1`] = `
Array [
  Object {
    "char": "s",
    "index": 0,
    "type": "VARIABLE",
  },
  Object {
    "char": "w",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "i",
    "index": 2,
    "type": "VARIABLE",
  },
  Object {
    "char": "t",
    "index": 3,
    "type": "VARIABLE",
  },
  Object {
    "char": "c",
    "index": 4,
    "type": "VARIABLE",
  },
  Object {
    "char": "h",
    "index": 5,
    "type": "VARIABLE",
  },
  Object {
    "char": "M",
    "index": 6,
    "type": "VARIABLE",
  },
  Object {
    "char": "a",
    "index": 7,
    "type": "VARIABLE",
  },
  Object {
    "char": "p",
    "index": 8,
    "type": "VARIABLE",
  },
  Object {
    "char": "]",
    "index": 9,
    "type": "OPERATOR_END",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams one 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "a",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams operator & expression 1`] = `
Array [
  Object {
    "char": "[",
    "index": 0,
    "type": "OPERATOR_START",
  },
  Object {
    "char": "f",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "i",
    "index": 2,
    "type": "VARIABLE",
  },
  Object {
    "char": "l",
    "index": 3,
    "type": "VARIABLE",
  },
  Object {
    "char": "t",
    "index": 4,
    "type": "VARIABLE",
  },
  Object {
    "char": "e",
    "index": 5,
    "type": "VARIABLE",
  },
  Object {
    "char": "r",
    "index": 6,
    "type": "VARIABLE",
  },
  Object {
    "char": "]",
    "index": 7,
    "type": "OPERATOR_END",
  },
  Object {
    "char": "{",
    "index": 8,
    "type": "EXPRESSION_START",
  },
  Object {
    "char": "i",
    "index": 9,
    "type": "VARIABLE",
  },
  Object {
    "char": " ",
    "index": 10,
    "type": "UNKNOWN",
  },
  Object {
    "char": "=",
    "index": 11,
    "type": "UNKNOWN",
  },
  Object {
    "char": ">",
    "index": 12,
    "type": "UNKNOWN",
  },
  Object {
    "char": " ",
    "index": 13,
    "type": "UNKNOWN",
  },
  Object {
    "char": "i",
    "index": 14,
    "type": "VARIABLE",
  },
  Object {
    "char": " ",
    "index": 15,
    "type": "UNKNOWN",
  },
  Object {
    "char": "<",
    "index": 16,
    "type": "UNKNOWN",
  },
  Object {
    "char": " ",
    "index": 17,
    "type": "UNKNOWN",
  },
  Object {
    "char": "3",
    "index": 18,
    "type": "VARIABLE",
  },
  Object {
    "char": "}",
    "index": 19,
    "type": "EXPRESSION_END",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams operator 1`] = `
Array [
  Object {
    "char": "[",
    "index": 0,
    "type": "OPERATOR_START",
  },
  Object {
    "char": "s",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "w",
    "index": 2,
    "type": "VARIABLE",
  },
  Object {
    "char": "i",
    "index": 3,
    "type": "VARIABLE",
  },
  Object {
    "char": "t",
    "index": 4,
    "type": "VARIABLE",
  },
  Object {
    "char": "c",
    "index": 5,
    "type": "VARIABLE",
  },
  Object {
    "char": "h",
    "index": 6,
    "type": "VARIABLE",
  },
  Object {
    "char": "M",
    "index": 7,
    "type": "VARIABLE",
  },
  Object {
    "char": "a",
    "index": 8,
    "type": "VARIABLE",
  },
  Object {
    "char": "p",
    "index": 9,
    "type": "VARIABLE",
  },
  Object {
    "char": "]",
    "index": 10,
    "type": "OPERATOR_END",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams two consecutive 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "c",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "b",
    "index": 2,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 3,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams with error 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "b",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "#",
    "index": 3,
    "type": "ERROR",
  },
  Object {
    "char": "-",
    "index": 4,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams with sync group 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "(",
    "index": 1,
    "type": "GROUP_START",
  },
  Object {
    "char": "b",
    "index": 2,
    "type": "VARIABLE",
  },
  Object {
    "char": "c",
    "index": 3,
    "type": "VARIABLE",
  },
  Object {
    "char": "d",
    "index": 4,
    "type": "VARIABLE",
  },
  Object {
    "char": ")",
    "index": 5,
    "type": "GROUP_END",
  },
  Object {
    "char": "-",
    "index": 6,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`parseMarbleDiagram parses marble diagrams with unexpected character 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": ">",
    "index": 1,
    "type": "UNKNOWN",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams empty 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams hot 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "^",
    "index": 1,
    "type": "SUBSCRIPTION_POINT",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "-",
    "index": 3,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "b",
    "index": 4,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 5,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "-",
    "index": 6,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams invalid expression 1`] = `
Array [
  Object {
    "char": "i",
    "index": 0,
    "type": "VARIABLE",
  },
  Object {
    "char": " ",
    "index": 1,
    "type": "UNKNOWN",
  },
  Object {
    "char": "=",
    "index": 2,
    "type": "UNKNOWN",
  },
  Object {
    "char": ">",
    "index": 3,
    "type": "UNKNOWN",
  },
  Object {
    "char": " ",
    "index": 4,
    "type": "UNKNOWN",
  },
  Object {
    "char": "i",
    "index": 5,
    "type": "VARIABLE",
  },
  Object {
    "char": " ",
    "index": 6,
    "type": "UNKNOWN",
  },
  Object {
    "char": "<",
    "index": 7,
    "type": "UNKNOWN",
  },
  Object {
    "char": " ",
    "index": 8,
    "type": "UNKNOWN",
  },
  Object {
    "char": "3",
    "index": 9,
    "type": "VARIABLE",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams invalid operator 1`] = `
Array [
  Object {
    "char": "s",
    "index": 0,
    "type": "VARIABLE",
  },
  Object {
    "char": "w",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "i",
    "index": 2,
    "type": "VARIABLE",
  },
  Object {
    "char": "t",
    "index": 3,
    "type": "VARIABLE",
  },
  Object {
    "char": "c",
    "index": 4,
    "type": "VARIABLE",
  },
  Object {
    "char": "h",
    "index": 5,
    "type": "VARIABLE",
  },
  Object {
    "char": "M",
    "index": 6,
    "type": "VARIABLE",
  },
  Object {
    "char": "a",
    "index": 7,
    "type": "VARIABLE",
  },
  Object {
    "char": "p",
    "index": 8,
    "type": "VARIABLE",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams one 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "a",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams operator & expression 1`] = `
Array [
  Object {
    "char": Array [
      Object {
        "char": "f",
        "index": 1,
        "type": "VARIABLE",
      },
      Object {
        "char": "i",
        "index": 2,
        "type": "VARIABLE",
      },
      Object {
        "char": "l",
        "index": 3,
        "type": "VARIABLE",
      },
      Object {
        "char": "t",
        "index": 4,
        "type": "VARIABLE",
      },
      Object {
        "char": "e",
        "index": 5,
        "type": "VARIABLE",
      },
      Object {
        "char": "r",
        "index": 6,
        "type": "VARIABLE",
      },
    ],
    "endIndex": 7,
    "index": 0,
    "startIndex": 0,
    "type": "OPERATOR",
  },
  Object {
    "char": Array [
      Object {
        "char": "i",
        "index": 9,
        "type": "VARIABLE",
      },
      Object {
        "char": " ",
        "index": 10,
        "type": "UNKNOWN",
      },
      Object {
        "char": "=",
        "index": 11,
        "type": "UNKNOWN",
      },
      Object {
        "char": ">",
        "index": 12,
        "type": "UNKNOWN",
      },
      Object {
        "char": " ",
        "index": 13,
        "type": "UNKNOWN",
      },
      Object {
        "char": "i",
        "index": 14,
        "type": "VARIABLE",
      },
      Object {
        "char": " ",
        "index": 15,
        "type": "UNKNOWN",
      },
      Object {
        "char": "<",
        "index": 16,
        "type": "UNKNOWN",
      },
      Object {
        "char": " ",
        "index": 17,
        "type": "UNKNOWN",
      },
      Object {
        "char": "3",
        "index": 18,
        "type": "VARIABLE",
      },
    ],
    "endIndex": 19,
    "index": 8,
    "startIndex": 8,
    "type": "EXPRESSION",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams operator 1`] = `
Array [
  Object {
    "char": Array [
      Object {
        "char": "s",
        "index": 1,
        "type": "VARIABLE",
      },
      Object {
        "char": "w",
        "index": 2,
        "type": "VARIABLE",
      },
      Object {
        "char": "i",
        "index": 3,
        "type": "VARIABLE",
      },
      Object {
        "char": "t",
        "index": 4,
        "type": "VARIABLE",
      },
      Object {
        "char": "c",
        "index": 5,
        "type": "VARIABLE",
      },
      Object {
        "char": "h",
        "index": 6,
        "type": "VARIABLE",
      },
      Object {
        "char": "M",
        "index": 7,
        "type": "VARIABLE",
      },
      Object {
        "char": "a",
        "index": 8,
        "type": "VARIABLE",
      },
      Object {
        "char": "p",
        "index": 9,
        "type": "VARIABLE",
      },
    ],
    "endIndex": 10,
    "index": 0,
    "startIndex": 0,
    "type": "OPERATOR",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams two consecutive 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "c",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "b",
    "index": 2,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 3,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams with error 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "b",
    "index": 1,
    "type": "VARIABLE",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": "#",
    "index": 3,
    "type": "ERROR",
  },
  Object {
    "char": "-",
    "index": 4,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams with sync group 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": Array [
      Object {
        "char": "b",
        "index": 2,
        "type": "VARIABLE",
      },
      Object {
        "char": "c",
        "index": 3,
        "type": "VARIABLE",
      },
      Object {
        "char": "d",
        "index": 4,
        "type": "VARIABLE",
      },
    ],
    "endIndex": 5,
    "index": 1,
    "startIndex": 1,
    "type": "GROUP",
  },
  Object {
    "char": "-",
    "index": 6,
    "type": "EMPTY_FRAME",
  },
]
`;

exports[`tokenizeMarbleDiagram tokenizes parsed marble diagrams with unexpected character 1`] = `
Array [
  Object {
    "char": "-",
    "index": 0,
    "type": "EMPTY_FRAME",
  },
  Object {
    "char": ">",
    "index": 1,
    "type": "UNKNOWN",
  },
  Object {
    "char": "-",
    "index": 2,
    "type": "EMPTY_FRAME",
  },
]
`;
